[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/scenes/interface/Settings.gd" type="Script" id=1]
[ext_resource path="res://src/assets/fonts/PixeloidSans-JR6qo.ttf" type="FontFile" id=2]

[sub_resource type="FontFile" id=1]
font_data = ExtResource( 2 )

[sub_resource type="FontFile" id=2]
font_data = ExtResource( 2 )

[sub_resource type="FontFile" id=3]
font_data = ExtResource( 2 )

[sub_resource type="FontFile" id=4]
font_data = ExtResource( 2 )

[sub_resource type="FontFile" id=5]
font_data = ExtResource( 2 )

[sub_resource type="FontFile" id=9]
font_data = ExtResource( 2 )

[sub_resource type="FontFile" id=6]
font_data = ExtResource( 2 )

[sub_resource type="FontFile" id=7]
font_data = ExtResource( 2 )

[sub_resource type="FontFile" id=8]
font_data = ExtResource( 2 )

[node name="Settings" type="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -300.0
offset_right = 512.0
offset_bottom = 300.0
script = ExtResource( 1 )

[node name="SettingTabs" type="TabContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -158.0
offset_top = -97.0
offset_right = 159.0
offset_bottom = 166.0
theme_override_fonts/font = SubResource( 1 )
tab_alignment = 2

[node name="Video" type="TabBar" parent="SettingTabs"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 38.0
offset_right = -4.0
offset_bottom = -4.0

[node name="MarginContainer" type="MarginContainer" parent="SettingTabs/Video"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VideoSettings" type="GridContainer" parent="SettingTabs/Video/MarginContainer"]
offset_right = 309.0
offset_bottom = 221.0
theme_override_constants/v_separation = 11
theme_override_constants/h_separation = 19
columns = 2

[node name="ScreenMode" type="Label" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
offset_top = 3.0
offset_right = 115.0
offset_bottom = 23.0
theme_override_fonts/font = SubResource( 2 )
text = "Display Mode"

[node name="DisplayOption" type="OptionButton" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
offset_left = 134.0
offset_right = 250.0
offset_bottom = 26.0
size_flags_horizontal = 9
theme_override_fonts/font = SubResource( 3 )
text = "Windowed"
align = 1
items = [ "Windowed", null, false, 0, null, "Fullscreen", null, false, 1, null ]
selected = 0

[node name="VSync" type="Label" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
offset_top = 47.0
offset_right = 115.0
offset_bottom = 67.0
theme_override_fonts/font = SubResource( 4 )
text = "VSync"

[node name="VSyncBtn" type="CheckButton" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
offset_left = 134.0
offset_top = 37.0
offset_right = 250.0
offset_bottom = 77.0
theme_override_fonts/font = SubResource( 5 )

[node name="Esc" type="Label" parent="SettingTabs/Video"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -59.0
offset_top = -21.0
offset_right = -19.0
offset_bottom = -1.0
theme_override_fonts/font = SubResource( 9 )
text = "Esc"
align = 1
valign = 1

[node name="Audio" type="TabBar" parent="SettingTabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 32.0
offset_right = -4.0
offset_bottom = -4.0

[node name="MarginContainer" type="MarginContainer" parent="SettingTabs/Audio"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="AudioSettings" type="GridContainer" parent="SettingTabs/Audio/MarginContainer"]
offset_right = 309.0
offset_bottom = 227.0
theme_override_constants/v_separation = 17

[node name="MasterVol" type="Label" parent="SettingTabs/Audio/MarginContainer/AudioSettings"]
offset_right = 200.0
offset_bottom = 20.0
theme_override_fonts/font = SubResource( 6 )
text = "Master Volume"

[node name="MasterVolSlider" type="HSlider" parent="SettingTabs/Audio/MarginContainer/AudioSettings"]
offset_top = 37.0
offset_right = 200.0
offset_bottom = 53.0
custom_minimum_size = Vector2( 200, 0 )
size_flags_horizontal = 8
size_flags_vertical = 1
min_value = -30.0
max_value = 0.0
value = -10.0

[node name="MusicVol" type="Label" parent="SettingTabs/Audio/MarginContainer/AudioSettings"]
offset_top = 70.0
offset_right = 200.0
offset_bottom = 90.0
theme_override_fonts/font = SubResource( 7 )
text = "Music Volume"

[node name="MusicVolSlider" type="HSlider" parent="SettingTabs/Audio/MarginContainer/AudioSettings"]
offset_top = 107.0
offset_right = 200.0
offset_bottom = 123.0
custom_minimum_size = Vector2( 200, 0 )
size_flags_horizontal = 8
size_flags_vertical = 1
min_value = -30.0
max_value = 0.0
value = -10.0

[node name="SFXVol" type="Label" parent="SettingTabs/Audio/MarginContainer/AudioSettings"]
offset_top = 140.0
offset_right = 200.0
offset_bottom = 160.0
theme_override_fonts/font = SubResource( 8 )
text = "SFX Volume"

[node name="SFXVolSlider" type="HSlider" parent="SettingTabs/Audio/MarginContainer/AudioSettings"]
offset_top = 177.0
offset_right = 200.0
offset_bottom = 193.0
custom_minimum_size = Vector2( 200, 0 )
size_flags_horizontal = 8
size_flags_vertical = 1
min_value = -30.0
max_value = 0.0
value = -10.0

[node name="Esc" type="Label" parent="SettingTabs/Audio"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -59.0
offset_top = -21.0
offset_right = -19.0
offset_bottom = -1.0
theme_override_fonts/font = SubResource( 9 )
text = "Esc"
align = 1
valign = 1

[connection signal="item_selected" from="SettingTabs/Video/MarginContainer/VideoSettings/DisplayOption" to="." method="_on_DisplayOption_item_selected"]
[connection signal="toggled" from="SettingTabs/Video/MarginContainer/VideoSettings/VSyncBtn" to="." method="_on_VSyncBtn_toggled"]
[connection signal="value_changed" from="SettingTabs/Audio/MarginContainer/AudioSettings/MasterVolSlider" to="." method="_on_MasterVolSlider_value_changed"]
[connection signal="value_changed" from="SettingTabs/Audio/MarginContainer/AudioSettings/MusicVolSlider" to="." method="_on_MusicVolSlider_value_changed"]
[connection signal="value_changed" from="SettingTabs/Audio/MarginContainer/AudioSettings/SFXVolSlider" to="." method="_on_SFXVolSlider_value_changed"]
